# Agent-Tool-Protocol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
agenttoolprotocol-0.2.4/django_atp/: apps.py
atp_sdk/: __init__.py  clients.py
atp_ui/: components.py  contents.py  forms.py  layouts.py  utils.py
django_atp/: urls.py  views.py
fastapi_atp/: registry.py
