[project]
name = "AgentToolProtocol"
version = "0.1.1"
description = "Official SDK to register ToolKits to ChatATP"
readme = "README.md"
authors = [
  { name = "Samuel Obinna Chimdi", email = "sammyfirst6@gmail.com" }
]
license = {text = "MIT"}
dependencies = [
  "requests",
  "websocket-client"
]
requires-python = ">=3.7"
keywords = ["agent", "toolkit", "chat", "sdk", "llm", "ChatATP", "ChatGPT", "AI Agent Frameworks"]

[project.urls]
"Homepage" = "https://github.com/sam-14uel/Agent-Tool-Protocol"
"Repository" = "https://github.com/sam-14uel/Agent-Tool-Protocol"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
