[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AgentToolProtocol"
version = "0.1.5"  # Updated version
description = "A Python SDK for registering, exposing, and serving your own Python functions as tools via the ATP platform. Supports secure OAuth2 flows, dynamic tool registration, and real-time tool invocation via WebSocket or HTTP."
readme = "README.md"
authors = [
  { name = "Samuel Obinna Chimdi", email = "sammyfirst6@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
keywords = [
  "agent",
  "toolkit",
  "chat",
  "sdk",
  "llm",
  "ChatATP",
  "ChatGPT",
  "AI Agent Frameworks",
  "websocket",
  "http",
  "api",
  "tools",
  "functions",
  "automation",
  "ATP",
  "Agent Tool Protocol",
  "ATP SDK",
  "tool registration",
  "tool invocation",
  "tool serving",
  "toolkit registration",
  "toolkit invocation",
  "toolkit serving",
  "remote tool invocation",
  "remote tool serving",
  "remote tool registration",
  "remote toolkit invocation",
  "Samuel Obinna Chimdi",
  "ChatATP Agent"
]
dependencies = [
  "requests>=2.31.0",
  "websocket-client>=1.6.1",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/agent-tool-protocol/python-sdk"
Repository = "https://github.com/agent-tool-protocol/python-sdk"
Issues = " https://github.com/agent-tool-protocol/python-sdk/issues"
Documentation = "https://github.com/agent-tool-protocol/python-sdk/blob/main/README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["atp_sdk*", "atp_sdk.*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.*", "py.typed"]
